### Added

- Added "mop reload all" console command, which will load all rule files - regardless if the mod corresponding to it is present or not
- (MSCLoader) MOP will successfully load back, after it was disabled

### Bug Fixes

- Possibly fixed kilju bucket lid detaching when left behind
- Further fixes regarding loading of rule files
- Fixed exhaust muffler trigger sometimes not being enabled back when muffler detaches